[gd_scene load_steps=3 format=3 uid="uid://b1jmqixrhgh6r"]

[ext_resource type="Script" uid="uid://lmrn143q65tk" path="res://scripts/death_screen.gd" id="1_yiw81"]
[ext_resource type="FontFile" uid="uid://ciwv1nxsex0wx" path="res://assets/fonts/JetBrainsMono-Regular.ttf" id="2_hwssb"]

[node name="Death" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="death_screen" type="PanelContainer" parent="."]
self_modulate = Color(0, 0, 0, 0.50980395)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 449.0
offset_top = -279.0
offset_right = -449.0
offset_bottom = 287.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yiw81")

[node name="MarginContainer" type="MarginContainer" parent="death_screen"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="death_screen/MarginContainer"]
layout_mode = 2

[node name="death_message" type="Label" parent="death_screen/MarginContainer/VBoxContainer"]
modulate = Color(0.83282197, 0.08275195, 0.17040646, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_hwssb")
theme_override_font_sizes/font_size = 66
text = "You died! :-("
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="death_screen/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="buttons" type="VBoxContainer" parent="death_screen/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 44

[node name="retry" type="Button" parent="death_screen/MarginContainer/VBoxContainer/MarginContainer/buttons"]
self_modulate = Color(0.99137706, 0, 0.19838691, 1)
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_hwssb")
theme_override_font_sizes/font_size = 25
text = "Retry"

[node name="main_menu" type="Button" parent="death_screen/MarginContainer/VBoxContainer/MarginContainer/buttons"]
self_modulate = Color(0.99137706, 0, 0.19838691, 1)
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_hwssb")
theme_override_font_sizes/font_size = 25
text = "Main Menu
"

[connection signal="pressed" from="death_screen/MarginContainer/VBoxContainer/MarginContainer/buttons/retry" to="death_screen" method="_on_retry_pressed"]
[connection signal="pressed" from="death_screen/MarginContainer/VBoxContainer/MarginContainer/buttons/main_menu" to="death_screen" method="_on_main_menu_pressed"]
